[package]
name = "toolbelt"
version = "0.2.2"
edition = "2021"
description = "WASM image Converter"
repository = "https://github.com/helvete003/toolbelt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = {version= "0.1", optional = true }
image = {version= "0.23", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
base64 = "0.13"

[profile.release]
opt-level = 's'
